--- a/CSharpProject/Game/Game.csproj
+++ b/CSharpProject/Game/Game.csproj
@@ -9,10 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Game</RootNamespace>
     <AssemblyName>Game</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -46,9 +45,16 @@
   <ItemGroup>
     <Compile Include="Characters\Character.cs" />
     <Compile Include="Characters\Knight.cs" />
+    <Compile Include="ItemSlot.cs" />
+    <Compile Include="Items\Chest.cs" />
+    <Compile Include="Items\Helm.cs" />
     <Compile Include="Items\Item.cs" />
+    <Compile Include="Items\Legs.cs" />
+    <Compile Include="Items\OneHandedWeapon.cs" />
     <Compile Include="MainGameClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SlotID.cs" />
+    <Compile Include="XPNeededForEveryLevel.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
