--- a/CSharpProject/Game/Game.csproj
+++ b/CSharpProject/Game/Game.csproj
@@ -45,9 +45,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Characters\Heroes\Character.cs" />
+    <Compile Include="Characters\Heroes\Dwarf.cs" />
     <Compile Include="Characters\Heroes\Knight.cs" />
     <Compile Include="Characters\Enemies\Enemy.cs" />
     <Compile Include="Characters\GameObject.cs" />
+    <Compile Include="Characters\Heroes\Ranger.cs" />
     <Compile Include="Interfaces\IAttackable.cs" />
     <Compile Include="Interfaces\IDie.cs" />
     <Compile Include="ItemSlot.cs" />
@@ -60,7 +62,6 @@
     <Compile Include="Misc\NameLists.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SlotID.cs" />
-    <Compile Include="XPNeededForEveryLevel.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
